# fastchat-app

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 46e05cc0b5c9_add_user_id_to_users_online.py  965848b780ef_add_users_online_table.py
backend/app/: database.py  main.py  metrics.py  models.py  rate_limiter.py  schemas.py  websocket_dtos.py  websocket_manager.py
backend/app/routers/: metrics.py  presence.py  websocket.py
backend/app/services/: presence.py
backend/tests/: conftest.py  test_api.py  test_metrics.py  test_rate_limiting.py  test_websocket.py
docs/: chat_app_architecture.md  websocket_protocol.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  env.example  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatPane.tsx  ConnectionBanner.tsx  OnlineUsers.tsx
frontend/src/services/: heartbeat.ts  websocket.ts
frontend/src/stores/: chat.ts  presence.ts
frontend/src/utils/: identity.ts
infra/: docker-compose.yml
scripts/: manual_test.py  setup-neon.py
